[package]
name = "roller"
version = "0.1.0"
authors = ["mrZalli <misterzalli@gmail.com>"]
build = "build.rs"

[dependencies]
rustyline = "^1.0"
regex = "^1.0"
lalrpop-util = "0.14.0"
num = "^0.1"
lazy_static = "^1.0"
clap = "^2.31"

[target.'cfg(unix)'.dependencies]
libc = "^0.2"

[build-dependencies]
lalrpop = "0.14.0"
